k8s-hono-api/hono-api-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hono-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3009
  selector:
    app: hono-api
